--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "googleapis": "^159.0.0",
     "image-size": "^2.0.2",
     "mime-types": "^3.0.1",
     "nanoid": "^5.1.5",
