--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "image-size": "^2.0.2",
     "mime-types": "^3.0.1",
     "nanoid": "^5.1.5",
+    "node-cron": "^4.2.1",
     "uuid": "^11.1.0"
   }
 }
