--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "googleapis": "^159.0.0",
     "image-size": "^2.0.2",
     "mime-types": "^3.0.1",
     "nanoid": "^5.1.5",
     "node-cron": "^4.2.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xml2js": "^0.6.2"
   }
 }
